[package]
name = "anthill"
version = "0.1.0"
authors = ["kiyan42 <yazdani.kiyan@protonmail.com>"]
description = "maildir and imap synchronizing tool"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
imap = "2.1"
native-tls = "0.2.2"
rand = "0.7.3"
gethostname = "0.2.1"
regex = "1.3.9"
lazy_static = "1.4.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
